versão final 5.0 correção na  organização do index html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -27,55 +29,55 @@
         <div class="items-container">
             <h1 id="logoh1">Primeiro, seu prato</h1>
             <div class="items">
-                <div data-test="dish" id="item1" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div data-test="dish" id="item1" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck1" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço1">17,00</p>
                     </div>
                 </div>
-                <div data-test="dish" id="item2" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div data-test="dish" id="item2" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck2" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço2">19,00</p>
                     </div>
                 </div>
-                <div  id="item3" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div id="item3" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck3" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço3">20,00</p>
                     </div>
                 </div>
-                <div  id="item4" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div id="item4" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck4" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço4">14,00</p>
                     </div>
                 </div>
-                <div  id="item5" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div id="item5" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck5" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço5">14,00</p>
                     </div>
                 </div>
-                <div  id="item6" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div id="item6" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck6" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço6">14,00</p>
@@ -87,61 +89,55 @@
         <div class="items-container">
             <h1>Agora, sua bebida</h1>
             <div class="items">
-                <div data-test="drink" id="item12" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item12" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck12" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço12">4,00</p>
                     </div>
                 </div>
-                <div data-test="drink" id="item22" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item22" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck22" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço22">6,00</p>
                     </div>
                 </div>
-                <div data-test="drink" id="item32" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item32" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck32" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço32">8,00</p>
                     </div>
                 </div>
-                <div data-test="drink" id="item42" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item42" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck42" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço42">4,00</p>
                     </div>
                 </div>
-                <div data-test="drink" id="item52" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item52" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck52" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço52">4,00</p>
                     </div>
                 </div>
-                <div data-test="drink" id="item62" class="item" onclick="selectionBebidas(id)"
-                    style="position: relative;">
+                <div data-test="drink" id="item62" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck62" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço62">4,00</p>
@@ -153,61 +149,55 @@
         <div class="items-container">
             <h1>Por fim, sua sobremesa</h1>
             <div class="items">
-                <div id="item13" data-test="dessert" class="item" onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="item13" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck13" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço13">7,00</p>
                     </div>
                 </div>
-                <div id="item23" data-test="dessert" class="item" onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="item23" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck23" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço23">7,00</p>
+                    <div>R$<p data-test="item-price" id="preço23">9,00</p>
                     </div>
                 </div>
-                <div id="item33" data-test="dessert" class="item" onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="item33" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck33" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço33">7,00</p>
+                    <div>R$<p data-test="item-price" id="preço33">11,00</p>
                     </div>
                 </div>
-                <div id="item43" data-test="dessert" class="item" onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="item43" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck43" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço43">7,00</p>
+                    <div>R$<p data-test="item-price" id="preço43">13,00</p>
                     </div>
                 </div>
-                <div id="item53" data-test="dessert" class="item" onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="item53" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck53" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço53">7,00</p>
+                    <div>R$<p data-test="item-price" id="preço53">15,00</p>
                     </div>
                 </div>
-                <div id="63" data-test="dessert" class="item " onclick="selectionDessert(id)"
-                    style="position: relative;">
+                <div id="63" data-test="dessert" class="item " onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck63" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
-                        class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
+                        class="d-none item-check">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço63">7,00</p>
@@ -222,12 +212,16 @@
             <div class="modal" data-test="confirm-order-modal">
                 <h1>Confirme seu pedido</h1>
                 <div class="modal-container">
-                    
-                </div>  
+
+                </div>
                 <div id="modal-buttons">
-                    <button data-test="confirm-order-btn" id="confirm-button" onclick="send()"><p>Tudo certo, pode pedir</p></button>
-                    <button data-test="cancel-order-btn" onclick="closeModal()"><p>Cancelar</p></button>
-                </div> 
+                    <button data-test="confirm-order-btn" id="confirm-button" onclick="send()">
+                        <p>Tudo certo, pode pedir</p>
+                    </button>
+                    <button data-test="cancel-order-btn" onclick="closeModal()">
+                        <p>Cancelar</p>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
