versão final 5.1 correção  da semantica do  codgo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div>R$<p data-test="item-price" id="preço2">19,00</p>
                     </div>
                 </div>
-                <div id="item3" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item3" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck3" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
@@ -56,7 +56,7 @@
                     <div>R$<p data-test="item-price" id="preço3">20,00</p>
                     </div>
                 </div>
-                <div id="item4" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item4" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck4" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
@@ -65,7 +65,7 @@
                     <div>R$<p data-test="item-price" id="preço4">14,00</p>
                     </div>
                 </div>
-                <div id="item5" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item5" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck5" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
@@ -74,7 +74,7 @@
                     <div>R$<p data-test="item-price" id="preço5">14,00</p>
                     </div>
                 </div>
-                <div id="item6" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item6" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck6" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
