v 6.0 preco, e bebidas, botão  tudo  ok

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck1" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3 id="nome1"data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço1">17,00</p>
                     </div>
@@ -42,7 +42,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck2" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3 id="nome2" data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço2">19,00</p>
                     </div>
@@ -51,7 +51,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck3" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3 id="nome3"  data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço3">20,00</p>
                     </div>
@@ -60,7 +60,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck4" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3 id="nome4"  data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço4">14,00</p>
                     </div>
@@ -69,7 +69,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck5" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3  id="nome5" data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço5">14,00</p>
                     </div>
@@ -78,7 +78,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck6" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Frango Yin Yang</h3>
+                    <h3 id="nome6"  data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço6">14,00</p>
                     </div>
@@ -93,7 +93,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck12" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome12" data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço12">4,00</p>
                     </div>
@@ -102,7 +102,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck22" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome22"  data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço22">6,00</p>
                     </div>
@@ -111,7 +111,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck32" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome32"  data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço32">8,00</p>
                     </div>
@@ -120,7 +120,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck42" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome42"  data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço42">4,00</p>
                     </div>
@@ -129,7 +129,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck52" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome52"  data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço52">4,00</p>
                     </div>
@@ -138,7 +138,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <img id="itemcheck62" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Coca-Cola</h3>
+                    <h3 id="nome62" data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço62">4,00</p>
                     </div>
@@ -153,16 +153,16 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck13" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome13" data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço13">7,00</p>
+                    <div>R$<p data-test="item-price" id="preço13">7,90</p>
                     </div>
                 </div>
                 <div id="item23" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck23" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome23"data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço23">9,00</p>
                     </div>
@@ -171,7 +171,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck33" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome33"data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço33">11,00</p>
                     </div>
@@ -180,7 +180,7 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck43" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome43" data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço43">13,00</p>
                     </div>
@@ -189,16 +189,16 @@
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck53" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome53" data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço53">15,00</p>
                     </div>
                 </div>
-                <div id="63" data-test="dessert" class="item " onclick="selectionDessert(id)">
+                <div id="item63" data-test="dessert" class="item " onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <img id="itemcheck63" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none item-check">
-                    <h3 data-test="item-name">Pudim gostosinho, macio </h3>
+                    <h3 id="nome63" data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço63">7,00</p>
                     </div>
